<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.setup.PermissionsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_permissions_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_permissions_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/card_grey"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_radar"
                    app:tint="@color/accent_turquoise" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_permissions_bluetooth_scan_perm_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_permissions_bluetooth_scan_perm_desc"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_sensors"
                    app:tint="@color/accent_turquoise" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_permissions_bluetooth_advertise_perm_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_permissions_bluetooth_advertise_perm_desc"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_location_on"
                    app:tint="@color/accent_turquoise" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_permissions_location_perm_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_permissions_location_perm_desc"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[ Debug: PC connection test ]" />
</LinearLayout>